proper LinkedIn capitatlisastion

--- a/website/04-About-us/Staff/Headquarters/02-global-activities.html
+++ b/website/04-About-us/Staff/Headquarters/02-global-activities.html
@@ -76,7 +76,7 @@
                 <p class="margin_bottom_20">Since 2019 Adriano has led an EU-funded capacity building project aimed at establishing the <a href="{{link_url::478}}" class="titolo_gc_asia_pacific">Human Rights Centre of the National University of Timor-Leste (UNTL)</a>.</p>
                 <p class="margin_bottom_20">Previously he worked as Academic Tutor and subsequently Coordinator of the <a href="{{link_url::111}}" class="titolo_gc_south_east_europe">GC South East Europe/ERMA</a> on behalf of the Institute for Central-Eastern and Balkan Europe/University of Bologna (IECOB).</p>
                 <p class="margin_bottom_20"> As IECOB research fellow in regional studies he also lectured internationally, published, organised scientific conferences and participated in panels as speaker. Since 2014 he has been president of the alumni association of the MA in Eastern European Studies of the University of Bologna.</p>
-                <p>Linkedin Profile:  <a class="titolo_gc_europe" href="https://www.linkedin.com/in/adrianoremiddi" target="_blank">https://www.linkedin.com/in/adrianoremiddi</a><br>
+                <p>LinkedIn Profile:  <a class="titolo_gc_europe" href="https://www.linkedin.com/in/adrianoremiddi" target="_blank">https://www.linkedin.com/in/adrianoremiddi</a><br>
                 Academia Profile:  <a class="titolo_gc_europe" href="https://gchumanrights.academia.edu/AdrianoRemiddi" target="_blank">https://gchumanrights.academia.edu/AdrianoRemiddi</a><br>
                 Email: <a class="titolo_gc_europe" href="mailto:adriano.remiddi@gchumanrights.org">adriano.remiddi@gchumanrights.org</a><br>
                 Phone: <a class="titolo_gc_europe" href="tel:+670 77488176">+670 774 881 76</a></p>
