--- a/website/04-About-us/Staff/Headquarters/03-e-learning.html
+++ b/website/04-About-us/Staff/Headquarters/03-e-learning.html
@@ -3,14 +3,14 @@
 <div class="table_accordion">
     <div class="table_people_cell"><img class="img_persona" src="files/eiuc/staff/Angela_Melchiorre_global_campus_eiuc.jpg" alt="Angela Melchiorre - Global Campus">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
-            <p class="ruolo_persona titolo_gc_europe">Academic Coordinator of Online Programmes</p>
+            <p class="ruolo_persona titolo_gc_europe">Online Programmes Manager/Head of Department</p>
             <p class="subtitle_page_programme margin_bottom_20">Angela Melchiorre</p>
-            <p class="margin_bottom_20">Angela Melchiorre is the Academic Coordinator of Online Programmes of the Global Campus of Human Rights. She has been working in human rights since 2000 and has a wealth of experience in distance and blended learning.</p>
+            <p class="margin_bottom_20">Dr. Angela Melchiorre designs and manages all Global Campus e-learning activities. She has worked in human rights since 2000 with multi-sectoral experiences.</p>
             <div class="text_read_more">
-                <p class="margin_bottom_20">For the Global Campus she designs, coordinates and moderates all e-learning activities (MOOCs as well as online and blended courses) and coordinates the outreach strategy of online journals.</p>
-                <p class="margin_bottom_20">In her previous roles, she was Programme Director of the European Master's Degree in Human Rights and Democratisation (EMA) managed by EIUC and Lecturer in Human Rights at the University of London where she also earned her PhD with a doctoral thesis on child marriage and the Convention on the Rights of the Child.Other teaching activities include master's courses at the University of Padova and guest lectures at the Universities of Deusto-Bilbao, Oslo, Sevilla, Vienna, York.</p>
-                <p class="margin_bottom_20">Dr. Melchiorre has also experience in NGO work (ActionAid International), diplomacy (Permanent Mission of Italy to the UN in Geneva and New York; EU Delegation in Geneva) and independent consultancies (UNESCO, UNICEF, UN CEDAW Committee). For many years she worked closely with the first UN Special Rapporteur on the right to Education, the late Katarina Tomasevski.</p>
-                <p class="margin_bottom_20">Her areas of expertise are children's rights, the right to education, the UN human rights system and Human Rights in International Politics. She graduated from EMA in 2000.</p>
+                <p class="margin_bottom_20">In her previous roles, she was Programme Director of the <a href="{{link_url::110}}" class="titolo_gc_europe" target="_blank">European Master's Degree in Human Rights and Democratisation (EMA)</a> and Lecturer at the University of London where she earned her PhD with a thesis on child marriage and the Convention on the Rights of the Child. Other teaching activities include post-graduate courses in universities around Europe.</p>
+                <p class="margin_bottom_20">Dr. Melchiorre has also experience with ActionAid International, the Italian and EU delegations at the UN in Geneva and New York, and independent consultancies with UNESCO, UNICEF, UN CEDAW, the UN Special Rapporteur on the Right to Education.</p>
+                <p class="margin_bottom_20">Her areas of expertise are children's rights, the right to education and Human Rights in International Politics. She graduated from EMA in 2000.</p>
+                <p>LinkedIn Profile:  <a class="titolo_gc_europe" href="https://www.linkedin.com/in/adrianoremiddi" target="_blank">https://www.linkedin.com/in/adrianoremiddi</a><br>
                 <p>Email: <a class="titolo_gc_europe" href="mailto:angela.melchiorre@gchumanrights.org">angela.melchiorre@gchumanrights.org</a><br> Phone: <a class="titolo_gc_europe" href="tel:+39 041 2720 950">+39 041 2720 950</a></p>
             </div>
             <div class="accordion accordion_gc_south_europe read_more">
@@ -34,7 +34,7 @@
                 <p class="margin_bottom_20">Since 2019 Adriano has led an EU-funded capacity building project aimed at establishing the <a href="{{link_url::478}}" class="titolo_gc_asia_pacific">Human Rights Centre of the National University of Timor-Leste (UNTL)</a>.</p>
                 <p class="margin_bottom_20">Previously he worked as Academic Tutor and subsequently Coordinator of the <a href="{{link_url::111}}" class="titolo_gc_south_east_europe">GC South East Europe/ERMA</a> on behalf of the Institute for Central-Eastern and Balkan Europe/University of Bologna (IECOB).</p>
                 <p class="margin_bottom_20"> As IECOB research fellow in regional studies he also lectured internationally, published, organised scientific conferences and participated in panels as speaker. Since 2014 he has been president of the alumni association of the MA in Eastern European Studies of the University of Bologna.</p>
-                <p>Linkedin Profile:  <a class="titolo_gc_europe" href="https://www.linkedin.com/in/adrianoremiddi" target="_blank">https://www.linkedin.com/in/adrianoremiddi</a><br>
+                <p>LinkedIn Profile:  <a class="titolo_gc_europe" href="https://www.linkedin.com/in/adrianoremiddi" target="_blank">https://www.linkedin.com/in/adrianoremiddi</a><br>
                 Academia Profile:  <a class="titolo_gc_europe" href="https://gchumanrights.academia.edu/AdrianoRemiddi" target="_blank">https://gchumanrights.academia.edu/AdrianoRemiddi</a><br>
                 Email: <a class="titolo_gc_europe" href="mailto:adriano.remiddi@gchumanrights.org">adriano.remiddi@gchumanrights.org</a><br>
                 Phone: <a class="titolo_gc_europe" href="tel:+670 77488176">+670 774 881 76</a></p>
