fixed contact details global activities

--- a/website/04-About-us/Staff/Headquarters/03-e-learning.html
+++ b/website/04-About-us/Staff/Headquarters/03-e-learning.html
@@ -10,8 +10,9 @@
                 <p class="margin_bottom_20">In her previous roles, she was Programme Director of the <a href="{{link_url::110}}" class="titolo_gc_europe" target="_blank">European Master's Degree in Human Rights and Democratisation (EMA)</a> and Lecturer at the University of London where she earned her PhD with a thesis on child marriage and the Convention on the Rights of the Child. Other teaching activities include post-graduate courses in universities around Europe.</p>
                 <p class="margin_bottom_20">Dr. Melchiorre has also experience with ActionAid International, the Italian and EU delegations at the UN in Geneva and New York, and independent consultancies with UNESCO, UNICEF, UN CEDAW, the UN Special Rapporteur on the Right to Education.</p>
                 <p class="margin_bottom_20">Her areas of expertise are children's rights, the right to education and Human Rights in International Politics. She graduated from EMA in 2000.</p>
-                <p>LinkedIn Profile:  <a class="titolo_gc_europe" href="https://www.linkedin.com/in/adrianoremiddi" target="_blank">https://www.linkedin.com/in/adrianoremiddi</a><br>
-                <p>Email: <a class="titolo_gc_europe" href="mailto:angela.melchiorre@gchumanrights.org">angela.melchiorre@gchumanrights.org</a><br> Phone: <a class="titolo_gc_europe" href="tel:+39 041 2720 950">+39 041 2720 950</a></p>
+                <p>LinkedIn Profile:  <a class="titolo_gc_europe" href="https://www.linkedin.com/in/adrianoremiddi" target="_blank">https://www.linkedin.com/in/adrianoremiddi</a></p>
+                <p>Email: <a class="titolo_gc_europe" href="mailto:angela.melchiorre@gchumanrights.org">angela.melchiorre@gchumanrights.org</a></p>
+                <p>Phone: <a class="titolo_gc_europe" href="tel:+39 041 2720 950">+39 041 2720 950</a></p>
             </div>
             <div class="accordion accordion_gc_south_europe read_more">
                 <div class="icon_e_title_accordion">
