--- a/website/04-About-us/Staff/Headquarters/02-global-activities.html
+++ b/website/04-About-us/Staff/Headquarters/02-global-activities.html
@@ -10,7 +10,8 @@
                 <p class="margin_bottom_20">She gained 10-year professional experience in project management and networking with EU institutions. In her previous roles, Valentina worked as Project Manager in the field of civil society participation and social inclusion and as Assistant in the external relations department of the Permanent Representation of Ireland to the EU during the EU Irish Presidency in 2013. </p>
                 <p class="margin_bottom_20">She has also collaborated with different international NGOs, institutions and other stakeholders on EU projects and policy and advocacy initiatives.</p>
                 <p class="margin_bottom_20">Valentina holds a Master’s degree in International relations from the University of Bologna and a Post-graduate Diploma in European studies from the European College of Parma.</p>
-                <p>Email: <a class="titolo_gc_europe" href="mailto:valentina.abita@gchumanrights.org">valentina.abita@gchumanrights.org</a><br> Phone: <a class="titolo_gc_europe" href="tel:+39 041 2720 940">+39 041 2720 940</a></p>
+                <p>Email: <a class="titolo_gc_europe" href="mailto:valentina.abita@gchumanrights.org">valentina.abita@gchumanrights.org</a></p>
+                <p>Phone: <a class="titolo_gc_europe" href="tel:+39 041 2720 940">+39 041 2720 940</a></p>
             </div>
             <div class="accordion accordion_gc_south_europe read_more">
                 <div class="icon_e_title_accordion">
@@ -30,7 +31,8 @@
             <p class="margin_bottom_20">He has been working as Project Officer on the Global Campus activities since November 2016. He holds a Master’s degree in Human Rights from the University of Padua and a Post-graduate M.A in Human Rights and Conflict Management from Sant’Anna School of Advanced Studies.</p>
             <div class="text_read_more">
                 <p class="margin_bottom_20">He held the position of International Relations Officer in Confindustria/Federpesca, working mainly in the fields of project management, policy analysis and lobbying, and Project Officer at Sant'Anna School. Prior to these experiences, he has been working in the cooperation field in Kenya, Congo and Haiti.</p>
-                <p>Email: <a class="titolo_gc_europe" href="mailto:giacomo.ottonello@gchumanrights.org">giacomo.ottonello@gchumanrights.org</a><br> Phone: <a class="titolo_gc_europe" href="tel:+39 041 2720 951">+39 041 2720 951</a></p>
+                <p>Email: <a class="titolo_gc_europe" href="mailto:giacomo.ottonello@gchumanrights.org">giacomo.ottonello@gchumanrights.org</a></p>
+                <p>Phone: <a class="titolo_gc_europe" href="tel:+39 041 2720 951">+39 041 2720 951</a></p>
             </div>
             <div class="accordion accordion_gc_south_europe read_more">
                 <div class="icon_e_title_accordion">
@@ -76,10 +78,10 @@
                 <p class="margin_bottom_20">Since 2019 Adriano has led an EU-funded capacity building project aimed at establishing the <a href="{{link_url::478}}" class="titolo_gc_asia_pacific">Human Rights Centre of the National University of Timor-Leste (UNTL)</a>.</p>
                 <p class="margin_bottom_20">Previously he worked as Academic Tutor and subsequently Coordinator of the <a href="{{link_url::111}}" class="titolo_gc_south_east_europe">GC South East Europe/ERMA</a> on behalf of the Institute for Central-Eastern and Balkan Europe/University of Bologna (IECOB).</p>
                 <p class="margin_bottom_20"> As IECOB research fellow in regional studies he also lectured internationally, published, organised scientific conferences and participated in panels as speaker. Since 2014 he has been president of the alumni association of the MA in Eastern European Studies of the University of Bologna.</p>
-                <p>LinkedIn Profile:  <a class="titolo_gc_europe" href="https://www.linkedin.com/in/adrianoremiddi" target="_blank">https://www.linkedin.com/in/adrianoremiddi</a><br>
-                Academia Profile:  <a class="titolo_gc_europe" href="https://gchumanrights.academia.edu/AdrianoRemiddi" target="_blank">https://gchumanrights.academia.edu/AdrianoRemiddi</a><br>
-                Email: <a class="titolo_gc_europe" href="mailto:adriano.remiddi@gchumanrights.org">adriano.remiddi@gchumanrights.org</a><br>
-                Phone: <a class="titolo_gc_europe" href="tel:+670 77488176">+670 774 881 76</a></p>
+                <p>LinkedIn Profile:  <a class="titolo_gc_europe" href="https://www.linkedin.com/in/adrianoremiddi" target="_blank">https://www.linkedin.com/in/adrianoremiddi</a></p>
+                <p>Academia Profile:  <a class="titolo_gc_europe" href="https://gchumanrights.academia.edu/AdrianoRemiddi" target="_blank">https://gchumanrights.academia.edu/AdrianoRemiddi</a></p>
+                <p>Email: <a class="titolo_gc_europe" href="mailto:adriano.remiddi@gchumanrights.org">adriano.remiddi@gchumanrights.org</a></p>
+                <p>Phone: <a class="titolo_gc_europe" href="tel:+670 77488176">+670 774 881 76</a></p>
             </div>
             <div class="accordion accordion_gc_south_europe read_more">
                 <div class="icon_e_title_accordion">
