--- a/website/04-About-us/Staff/Headquarters/01-secretariat.html
+++ b/website/04-About-us/Staff/Headquarters/01-secretariat.html
@@ -12,9 +12,10 @@
                 <p class="margin_bottom_20">In 2016 he was appointed Independent Expert leading the UN Global Study on Children Deprived of Liberty.</p>
                 <p class="margin_bottom_20">He was Director of the Netherlands Institute of Human Rights at Utrecht University (SIM: 1987-1989) and of the Ludwig Boltzmann Institute of Human Rights at Vienna University (BIM: 1992-2019) as well as Visiting Professor at the University of Lund (2002-2003), the Graduate Institute of International and Development Studies in Geneva (2008-2009), and at Stanford University in Palo Alto (2014).</p>
                 <p class="margin_bottom_20">He is author of more than 600 publications in the fields of public and international law and human rights.</p>
-                <div class="download"><a href="files/eiuc/staff/MANFRED_NOWAK_CV.pdf" download="files/eiuc/staff/MANFRED_NOWAK_CV.pdf"><img class="icona_download" src="files/eiuc/icona_download.svg" alt="icona download"></a>
+                <div class="download margin_bottom_20"><a href="files/eiuc/staff/MANFRED_NOWAK_CV.pdf" download="files/eiuc/staff/MANFRED_NOWAK_CV.pdf"><img class="icona_download" src="files/eiuc/icona_download.svg" alt="icona download"></a>
                     <p class="titolo_gc_europe"><a class="download" href="files/eiuc/staff/MANFRED_NOWAK_CV.pdf" download="">CV Download</a></p>
                 </div>
+
                 <p>Email: <a class="titolo_gc_europe" href="mailto:manfred.nowak@eiuc.org">manfred.nowak@eiuc.org</a></p>
                 <p>Phone: <a class="titolo_gc_europe" href="tel:+39 347 6263102">+39 347 626 3102</a></p>
             </div>
@@ -61,10 +62,9 @@
                 <p class="margin_bottom_20">George obtained his Ph.D. as well as an M.A. in Philosophy from the University of Toronto, Canada, and holds the degree of Cand. Mag. in Social Anthropology and History of Ideas from Aarhus University, Denmark.</p>
                 <p class="margin_bottom_20">Among his main research interests are issues related to the history and philosophy of human rights, human rights diplomacy, human rights and development cooperation, health and human rights, international medical ethics, and ethics for human rights professionals.</p>
                 <p class="margin_bottom_20">He is one of the joint editors of a Global Campus publication on music and human rights. A key focus of his teaching is to equip students to effectively engage with expressions of human rights scepticism.</p>
-                 <div class="download"><a href="files/eiuc/staff/GU-Selected-Publications.pdf" download="George Ulrich - Selected Publications.pdf"><img class="icona_download" src="files/eiuc/icona_download.svg" alt="icona download"></a>
+                 <div class="download margin_bottom_20"><a href="files/eiuc/staff/GU-Selected-Publications.pdf" download="George Ulrich - Selected Publications.pdf"><img class="icona_download" src="files/eiuc/icona_download.svg" alt="icona download"></a>
                     <p class="titolo_gc_europe"><a class="download" href="files/eiuc/staff/GU-Selected-Publications.pdf" download="George Ulrich - Selected Publications.pdf">Selected Publications Download</a></p>
                 </div>
-                <p>&nbsp;</p>
                 <p>Email: <a class="titolo_gc_europe" href="mailto:george.ulrich@gchumanrights.org">george.ulrich@gchumanrights.org</a></p>
                 <p>Phone: <a class="titolo_gc_europe" href="tel:+39 041 2720 937">+39 041 2720 937</a></p>
             </div>
