--- a/website/04-About-us/Staff/Headquarters/03-e-learning.html
+++ b/website/04-About-us/Staff/Headquarters/03-e-learning.html
@@ -25,20 +25,17 @@
             </div>
         </div>
     </div>
-    <div class="table_people_cell"><img class="img_persona" src="files/eiuc/moocs/mshr/Adriano_Remiddi_global_campus_eiuc2.jpg" alt="Adriano Remiddi - Global Campus">
+    <div class="table_people_cell"><img class="img_persona" src="files/eiuc/staff/Manuela_Pegoraro_global_campus.jpg" alt="Manuela Pegoraro - Global Campus">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
-            <p class="ruolo_persona titolo_gc_europe">Project Manager - Development of HR Education and Research at UNTL</p>
-            <p class="subtitle_page_programme margin_bottom_20">Adriano Remiddi</p>
-            <p class="margin_bottom_20">Adriano is an experienced practitioner in the field of international cooperation for higher education. He is committed to promoting democracy and HR education in post-conflict, developing and transitional societies.</p>
+            <p class="ruolo_persona titolo_gc_europe">Children's Rights E-learning Expert</p>
+            <p class="subtitle_page_programme margin_bottom_20">Manuela Pegoraro</p>
+            <p class="margin_bottom_20">Manuela Pegoraro started working for the Global Campus in 2019. She has 15+ years’ experience in education, communication and project-management. She previously worked for an agency of the European Commission and in academic and non-profit organisations in Europe, the USA and the Middle East.</p>
             <div class="text_read_more">
-                <p class="margin_bottom_20">In the course of ten years spent in Southeast Europe and later Asia-Pacific, he has developed a distinctive mix of academic and managerial skills and gained a diversified and progressively responsible professional experience.</p>
-                <p class="margin_bottom_20">Since 2019 Adriano has led an EU-funded capacity building project aimed at establishing the <a href="{{link_url::478}}" class="titolo_gc_asia_pacific">Human Rights Centre of the National University of Timor-Leste (UNTL)</a>.</p>
-                <p class="margin_bottom_20">Previously he worked as Academic Tutor and subsequently Coordinator of the <a href="{{link_url::111}}" class="titolo_gc_south_east_europe">GC South East Europe/ERMA</a> on behalf of the Institute for Central-Eastern and Balkan Europe/University of Bologna (IECOB).</p>
-                <p class="margin_bottom_20"> As IECOB research fellow in regional studies he also lectured internationally, published, organised scientific conferences and participated in panels as speaker. Since 2014 he has been president of the alumni association of the MA in Eastern European Studies of the University of Bologna.</p>
-                <p>LinkedIn Profile:  <a class="titolo_gc_europe" href="https://www.linkedin.com/in/adrianoremiddi" target="_blank">https://www.linkedin.com/in/adrianoremiddi</a><br>
-                Academia Profile:  <a class="titolo_gc_europe" href="https://gchumanrights.academia.edu/AdrianoRemiddi" target="_blank">https://gchumanrights.academia.edu/AdrianoRemiddi</a><br>
-                Email: <a class="titolo_gc_europe" href="mailto:adriano.remiddi@gchumanrights.org">adriano.remiddi@gchumanrights.org</a><br>
-                Phone: <a class="titolo_gc_europe" href="tel:+670 77488176">+670 774 881 76</a></p>
+                <p class="margin_bottom_20">Her most enjoyable and successful experiences are related to the coordination of European networks and the management of multinational project teams. She currently contributes to the implementation of online educational programmes on children’s rights.</p>
+                <p class="margin_bottom_20">Manuela holds an MA in E-learning from the University of Florence and one in Cultural Management from the University of Northumbria at Newcastle.</p>
+                <p>LinkedIn Profile:  <a class="titolo_gc_europe" href=" https://www.linkedin.com/in/manuelapegoraro" target="_blank"> https://www.linkedin.com/in/manuelapegoraro/</a></p>
+                <p>Email: <a class="titolo_gc_europe" href="mailto:manuela.pegoraro@gchumanrights.org">manuela.pegoraro@gchumanrights.org</a></p>
+                <p>Phone: <a class="titolo_gc_europe" href="tel:+390412720952">+39 041 2720 952</a></p>
             </div>
             <div class="accordion accordion_gc_south_europe read_more">
                 <div class="icon_e_title_accordion">
