pegoraro fixes to linkedin profile

--- a/website/04-About-us/Staff/Headquarters/03-e-learning.html
+++ b/website/04-About-us/Staff/Headquarters/03-e-learning.html
@@ -33,7 +33,7 @@
             <div class="text_read_more">
                 <p class="margin_bottom_20">Her most enjoyable and successful experiences are related to the coordination of European networks and the management of multinational project teams. She currently contributes to the implementation of online educational programmes on children’s rights.</p>
                 <p class="margin_bottom_20">Manuela holds an MA in E-learning from the University of Florence and one in Cultural Management from the University of Northumbria at Newcastle.</p>
-                <p>LinkedIn Profile:  <a class="titolo_gc_europe" href=" https://www.linkedin.com/in/manuelapegoraro" target="_blank"> https://www.linkedin.com/in/manuelapegoraro/</a></p>
+                <p>LinkedIn Profile:  <a class="titolo_gc_europe" href=" https://www.linkedin.com/in/manuelapegoraro" target="_blank"> https://www.linkedin.com/in/manuelapegoraro</a></p>
                 <p>Email: <a class="titolo_gc_europe" href="mailto:manuela.pegoraro@gchumanrights.org">manuela.pegoraro@gchumanrights.org</a></p>
                 <p>Phone: <a class="titolo_gc_europe" href="tel:+390412720952">+39 041 2720 952</a></p>
             </div>
