childrens-rights initial commit

--- a/website/04-About-us/Staff/Headquarters/05-childrens-rights.html
+++ b/website/04-About-us/Staff/Headquarters/05-childrens-rights.html
@@ -1,5 +1,5 @@
-<p class="subtitle_page_programme">E-learning Department</p>
-<p class="margin_bottom_20">We create and manage all distance-learning activities, including Massive Open Online Courses (MOOCs), specialised online courses and e-learning partnerships with key stakeholders. We also support and coordinate efforts in all GC Regional Programmes to complement on-site activities with[nbsp]online components (blended teaching).</p>
+<p class="subtitle_page_programme">Children’s Rights Department</p>
+<p class="margin_bottom_20">Together with the children’s rights regional officers across our network, we work closely with the Right Livelihood Foundation (RLF) in order to promote and protect the rights of children worldwide through research, education and advocacy projects. This includes the follow-up initiation activities under the umbrella of the UN Global Study on Children Deprived of Liberty. We further cooperate with the European Centre for Constitutional and Human Rights in order to strategically defend the rights of children.</p>
 <div class="table_accordion">
     <div class="table_people_cell"><img class="img_persona" src="files/eiuc/staff/Angela_Melchiorre_global_campus_eiuc.jpg" alt="Angela Melchiorre - Global Campus">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
