fixes to LinkedIn in elearning and first draft of childrens-rights

--- a/website/04-About-us/Staff/Headquarters/05-childrens-rights.html
+++ b/website/04-About-us/Staff/Headquarters/05-childrens-rights.html
@@ -1,18 +1,19 @@
 <p class="subtitle_page_programme">Children’s Rights Department</p>
 <p class="margin_bottom_20">Together with the children’s rights regional officers across our network, we work closely with the Right Livelihood Foundation (RLF) in order to promote and protect the rights of children worldwide through research, education and advocacy projects. This includes the follow-up initiation activities under the umbrella of the UN Global Study on Children Deprived of Liberty. We further cooperate with the European Centre for Constitutional and Human Rights in order to strategically defend the rights of children.</p>
 <div class="table_accordion">
-    <div class="table_people_cell"><img class="img_persona" src="files/eiuc/staff/Angela_Melchiorre_global_campus_eiuc.jpg" alt="Angela Melchiorre - Global Campus">
+    <div class="table_people_cell"><img class="img_persona" src="files/eiuc/staff/Reina-Marie_Loader_global_campus.jpg" alt="Reina-Marie Loader - Global Campus">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
-            <p class="ruolo_persona titolo_gc_europe">Online Programmes Manager/Head of Department</p>
-            <p class="subtitle_page_programme margin_bottom_20">Angela Melchiorre</p>
-            <p class="margin_bottom_20">Dr. Angela Melchiorre designs and manages all Global Campus e-learning activities. She has worked in human rights since 2000 with multi-sectoral experiences.</p>
+            <p class="ruolo_persona titolo_gc_europe">Children’s Rights Project Manager</p>
+            <p class="subtitle_page_programme margin_bottom_20">Reina-Marie Loader</p>
+            <p class="margin_bottom_20">Dr. Reina-Marie Loader joined the Global Campus in 2019 to coordinate child rights projects under the GC-RLF cooperation. Previously, she worked as a filmmaker specialised in approaching human rights issues through film.</p>
             <div class="text_read_more">
-                <p class="margin_bottom_20">In her previous roles, she was Programme Director of the <a href="{{link_url::110}}" class="titolo_gc_europe" target="_blank">European Master's Degree in Human Rights and Democratisation (EMA)</a> and Lecturer at the University of London where she earned her PhD with a thesis on child marriage and the Convention on the Rights of the Child. Other teaching activities include post-graduate courses in universities around Europe.</p>
-                <p class="margin_bottom_20">Dr. Melchiorre has also experience with ActionAid International, the Italian and EU delegations at the UN in Geneva and New York, and independent consultancies with UNESCO, UNICEF, UN CEDAW, the UN Special Rapporteur on the Right to Education.</p>
-                <p class="margin_bottom_20">Her areas of expertise are children's rights, the right to education and Human Rights in International Politics. She graduated from EMA in 2000.</p>
-                <p>LinkedIn Profile:  <a class="titolo_gc_europe" href="https://www.linkedin.com/in/angelamelchiorre" target="_blank">https://www.linkedin.com/in/angelamelchiorre</a></p>
-                <p>Email: <a class="titolo_gc_europe" href="mailto:angela.melchiorre@gchumanrights.org">angela.melchiorre@gchumanrights.org</a></p>
-                <p>Phone: <a class="titolo_gc_europe" href="tel:+39 041 2720 950">+39 041 2720 950</a></p>
+                <p class="margin_bottom_20">Her films have regularly been shown at international film festivals and conferences, while also receiving several awards and nominations for their socio-political and ecological impact.</p>
+                <p class="margin_bottom_20">She has lectured on the socio-political dimensions of film at several universities, including Exeter, Reading and Vienna.</p>
+                <p class="margin_bottom_20">At the University of Reading, she completed a practice-led PhD in film on the ethical representation of traumatic memory on screen.</p>
+                <p class="margin_bottom_20">This research has awarded her a nomination from the British Universities Film and Video Council for a Learning on Screen Award. In 2018, Reina completed an MA in Human Rights at the University of Vienna focused on <em>Ubuntu</em> and children deprived of liberty.</p>
+                <p>LinkedIn Profile:  <a class="titolo_gc_europe" href="https://www.linkedin.com/in/reina-marie-loader-588a0323/" target="_blank">https://www.linkedin.com/in/reinamarieloader</a></p>
+                <p>Email: <a class="titolo_gc_europe" href="mailto:reinamarie.loader@gchumanrights.org">reinamarie.loader@gchumanrights.org</a></p>
+                <p>Phone: <a class="titolo_gc_europe" href="tel:+39 041 2720 960">+39 041 2720 960</a></p>
             </div>
             <div class="accordion accordion_gc_south_europe read_more">
                 <div class="icon_e_title_accordion">
@@ -27,15 +28,15 @@
     </div>
     <div class="table_people_cell"><img class="img_persona" src="files/eiuc/staff/Manuela_Pegoraro_global_campus.jpg" alt="Manuela Pegoraro - Global Campus">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
-            <p class="ruolo_persona titolo_gc_europe">Children's Rights E-learning Expert</p>
-            <p class="subtitle_page_programme margin_bottom_20">Manuela Pegoraro</p>
-            <p class="margin_bottom_20">Manuela Pegoraro started working for the Global Campus in 2019. She has 15+ years’ experience in education, communication and project-management. She previously worked for an agency of the European Commission and in academic and non-profit organisations in Europe, the USA and the Middle East.</p>
+            <p class="ruolo_persona titolo_gc_europe">Coordinator of the Global Study dissemination</p>
+            <p class="subtitle_page_programme margin_bottom_20">Manu Krishan</p>
+            <p class="margin_bottom_20">Manu Krishan is the Coordinator of the Global Study dissemination and follow-up initiation activities.</p>
             <div class="text_read_more">
-                <p class="margin_bottom_20">Her most enjoyable and successful experiences are related to the coordination of European networks and the management of multinational project teams. She currently contributes to the implementation of online educational programmes on children’s rights.</p>
-                <p class="margin_bottom_20">Manuela holds an MA in E-learning from the University of Florence and one in Cultural Management from the University of Northumbria at Newcastle.</p>
-                <p>LinkedIn Profile:  <a class="titolo_gc_europe" href=" https://www.linkedin.com/in/manuelapegoraro" target="_blank"> https://www.linkedin.com/in/manuelapegoraro</a></p>
-                <p>Email: <a class="titolo_gc_europe" href="mailto:manuela.pegoraro@gchumanrights.org">manuela.pegoraro@gchumanrights.org</a></p>
-                <p>Phone: <a class="titolo_gc_europe" href="tel:+390412720952">+39 041 2720 952</a></p>
+                <p class="margin_bottom_20">During the Global Study implementation he was the Coordinator and Assistant to the Independent Expert leading the United Nations Global Study on Children deprived of Liberty based first at the Ludwig Boltzmann Institute of Human Rights followed by the Office of the High Commissioner for Human rights in Geneva. </p>
+                <p class="margin_bottom_20">Manu Krishan studied philosophy before graduating from the Vienna Master of Arts in Human Rights at the University of Vienna. He is a human rights researcher and Project Manager with proficiency in children’s rights, particularly on ethical considerations when researching with and for children.</p>
+                <p>LinkedIn Profile:  <a class="titolo_gc_europe" href="https://www.linkedin.com/in/manu-krishan-30967453/" target="_blank">https://www.linkedin.com/in/manukrishan</a></p>
+                <p>Email: <a class="titolo_gc_europe" href="mailto:manu.krishan@gchumanrights.org">manu.krishan@gchumanrights.org</a></p>
+                <!--<p>Phone: <a class="titolo_gc_europe" href="tel:+390412720952">+39 041 2720 952</a></p>-->
             </div>
             <div class="accordion accordion_gc_south_europe read_more">
                 <div class="icon_e_title_accordion">
