--- a/website/04-About-us/Staff/Headquarters/05-childrens-rights.html
+++ b/website/04-About-us/Staff/Headquarters/05-childrens-rights.html
@@ -26,9 +26,9 @@
             </div>
         </div>
     </div>
-    <div class="table_people_cell"><img class="img_persona" src="files/eiuc/staff/Manuela_Pegoraro_global_campus.jpg" alt="Manuela Pegoraro - Global Campus">
+    <div class="table_people_cell"><img class="img_persona" src="files/eiuc/staff/Manu_Krishan_global_campus.png" alt="Manu Krishan - Global Campus">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
-            <p class="ruolo_persona titolo_gc_europe">Coordinator of the Global Study dissemination</p>
+            <p class="ruolo_persona titolo_gc_europe">Global Study Coordinator</p>
             <p class="subtitle_page_programme margin_bottom_20">Manu Krishan</p>
             <p class="margin_bottom_20">Manu Krishan is the Coordinator of the Global Study dissemination and follow-up initiation activities.</p>
             <div class="text_read_more">
