fixes to all the titles

--- a/website/04-About-us/Staff/Headquarters/02-global-activities.html
+++ b/website/04-About-us/Staff/Headquarters/02-global-activities.html
@@ -3,7 +3,7 @@
 <div class="table_accordion">
     <div class="table_people_cell"><img class="img_persona" src="files/eiuc/staff/Valentina_Abita_global_campus_eiuc.jpg" alt="Valentina Abita - Global Campus">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
-            <p class="ruolo_persona titolo_gc_europe">Global Campus Project Manager (Head of Department)</p>
+            <p class="ruolo_persona titolo_gc_europe">Project Manager</p>
             <p class="subtitle_page_programme margin_bottom_20">Valentina Abita</p>
             <p class="margin_bottom_20">Valentina joined the Global Campus in November 2013. As Project Manager she coordinates the Global Activities (joint conferences, research projects, internships, visibility/advocacy initiatives, etc.) in cooperation with the colleagues of the seven GC regional programmes.</p>
             <div class="text_read_more">
