--- a/website/04-About-us/Staff/Headquarters/06-finance.html
+++ b/website/04-About-us/Staff/Headquarters/06-finance.html
@@ -3,7 +3,7 @@
 <div class="table_accordion">
     <div class="table_people_cell"><img class="img_persona" src="files/eiuc/staff/Alberta_Rocca_global_campus_eiuc.jpg" alt="Alberta Rocca - Global Campus">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
-            <p class="ruolo_persona titolo_gc_europe">Project Manager</p>
+            <p class="ruolo_persona titolo_gc_europe">Project Manager (Head of Department)</p>
             <p class="subtitle_page_programme margin_bottom_20">Alberta Rocca</p>
             <p class="margin_bottom_20">The Project Manager ensures the successful implementation of educational events carried out at GC headquarters in Venice such as trainings and summer schools.</p>
             <div class="text_read_more">
