--- a/website/04-About-us/Staff/Headquarters/03-e-learning.html
+++ b/website/04-About-us/Staff/Headquarters/03-e-learning.html
@@ -3,7 +3,7 @@
 <div class="table_accordion">
     <div class="table_people_cell"><img class="img_persona" src="files/eiuc/staff/Angela_Melchiorre_global_campus_eiuc.jpg" alt="Angela Melchiorre - Global Campus">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
-            <p class="ruolo_persona titolo_gc_europe">Online Programmes Manager/Head of Department</p>
+            <p class="ruolo_persona titolo_gc_europe">Online Programmes Manager</p>
             <p class="subtitle_page_programme margin_bottom_20">Angela Melchiorre</p>
             <p class="margin_bottom_20">Dr. Angela Melchiorre designs and manages all Global Campus e-learning activities. She has worked in human rights since 2000 with multi-sectoral experiences.</p>
             <div class="text_read_more">
