--- a/website/04-About-us/Staff/Headquarters/09-GS.html
+++ b/website/04-About-us/Staff/Headquarters/09-GS.html
@@ -5,11 +5,12 @@
         <div class="description_page_programme no_border no_padding no_margin_bottom">
             <p class="ruolo_persona titolo_gc_europe">General Services Manager / Head of Department</p>
             <p class="subtitle_page_programme margin_bottom_20">Alessandra Silanos</p>
-            <p class="margin_bottom_20">Alessandra Silanos is the EIUC General Service manager. She started working at the Centre in September 2003 as Logistics Officer and she is responsible for the organization of accommodation, catering and local transportation services for the participants in the EIUC/EMA events and activities.</p>
+            <p class="margin_bottom_20">Alessandra actively contributes to the organization by supervising and coordinating the acquisition of goods and services. She also selects and deals with the providers, including negotiating rates and conditions.</p>
             <div class="text_read_more">
-                <p class="margin_bottom_20">Recently the former Logistics Office has been changed into General Services Department, following the assignment of new responsibilities, with the view to streamline the procedures on the purchases of specific goods and services. As a consequence, her responsibilities and tasks has changed and increased consistently with the development of the Centre.</p>
-                <p class="margin_bottom_20">She holds a degree in Literatures and Arts from the University of Ca'Foscari in Venice. Before joining EIUC she worked as external consultant for the Office for the Protection of Architectural, Natural, Historic, Artistic and Ethno-Anthropological Heritages in Venice and Its Lagoon (Soprintendenza ai Beni Architettonici e Paesaggistici di Venezia e Laguna), and was an active member of the Cooperative Society a.r.l. "Città [&amp;] Ambiente", providing services oriented towards cultural heritage, environment and sustainable tourism.</p>
-                <p>Email: <a class="titolo_gc_europe" href="mailto:logistics@gchumanrights.org">logistics@gchumanrights.org /</a> <a class="titolo_gc_europe" href="mailto:alessandra.silanos@gchumanrights.org">alessandra.silanos@gchumanrights.org</a> <a class="titolo_gc_europe" href="mailto:logistics@gchumanrights.org"><br> Phone:</a> <a class="titolo_gc_europe" href="telto:+39 041 2720 916">+39 041 2720 916</a></p>
+                <p class="margin_bottom_20">Alessandra started working for the Global Campus in 2003 as the Logistics Officer. Over the years her responsibilities and tasks have changed and increased consistently with the development of the organisation.</p>
+                <p class="margin_bottom_20">Before joining the Global Campus she worked as an external consultant for the Office for the Protection of Architectural, Natural, Historic, Artistic and Ethno-Anthropological Heritage in Venice and the Lagoon (Soprintendenza ai Beni Architettonici e Paesaggistici di Venezia e Laguna).</p>
+                <p>Email: <a class="titolo_gc_europe" href="mailto:logistics@gchumanrights.org">logistics@gchumanrights.org</a>/<a class="titolo_gc_europe" href="mailto:alessandra.silanos@gchumanrights.org">alessandra.silanos@gchumanrights.org</a></p>
+                <p><a class="titolo_gc_europe" href="mailto:logistics@gchumanrights.org"><br> Phone:</a> <a class="titolo_gc_europe" href="telto:+39 041 2720 916">+39 041 2720 916</a></p>
             </div>
             <div class="accordion accordion_gc_south_europe read_more">
                 <div class="icon_e_title_accordion">
@@ -26,11 +27,13 @@
         <div class="description_page_programme no_border no_padding no_margin_bottom">
             <p class="ruolo_persona titolo_gc_europe">General Services Officer</p>
             <p class="subtitle_page_programme margin_bottom_20">Enrica Lot</p>
-            <p class="margin_bottom_20">Enrica Lot is the EIUC General Services Officer. She started working at the Centre in September 2012 as <span class="maiuscoletto">EMA</span> Intern. After 6 months and different working experiences, she got back to EIUC and joined the former Logistics Department, which later became General Services Department.</p>
+            <p class="margin_bottom_20">Enrica deals with GC-appointed travel agency to organise services (travels, hotel bookings, local transportation) for participants in Global Campus events and activities worldwide. </p>
             <div class="text_read_more">
-                <p class="margin_bottom_20">Now she deals with suppliers for what accommodation, restaurants, catering and local transportation regards. Recently her duties extended, including the purchase of stationery and other relevant office supplies.</p>
-                <p class="margin_bottom_20">Enrica studied tourism, languages and art history, and later graduated in Economics of Art. Her interests and working skills led her to more practical issues, and now she is a permanent member of EIUC staff.</p>
-                <p>Email: <a class="titolo_gc_europe" href="mailto:logistics@gchumanrights.org">logistics@gchumanrights.org</a> / <a class="titolo_gc_europe" href="mailto:enrica.lot@gchumanrights.org">enrica.lot@gchumanrights.org</a><br> Phone: <a class="titolo_gc_europe" href="tel:+39 041 2720 916">+39 041 2720 916</a></p>
+                <p class="margin_bottom_20">She also assists the General Services Manager in arranging accommodation, catering and local transportation services for events and activities in Venice. She is in charge of restocking stationery and other consumable goods.</p>
+                <p class="margin_bottom_20">Enrica started working at the GC in September 2012 as the <span class="maiuscoletto">EMA</span> intern. After several working experiences, she joined the Global Campus again in 2014 in the General Services Department.</p>
+                <p class="margin_bottom_20">Enrica studied tourism, languages and art history, and graduated in Economics of Art in 2012. While studying she founded the cultural initiative Art Sharing Project, for which she was in charge of editing the website’s articles.</p>
+                <p>Email: <a class="titolo_gc_europe" href="mailto:logistics@gchumanrights.org">logistics@gchumanrights.org</a>/<a class="titolo_gc_europe" href="mailto:enrica.lot@gchumanrights.org">enrica.lot@gchumanrights.org</a></p>
+                <p>Phone: <a class="titolo_gc_europe" href="tel:+39 041 2720 916">+39 041 2720 916</a></p>
             </div>
             <div class="accordion accordion_gc_south_europe read_more">
                 <div class="icon_e_title_accordion">
