small fixes on elearing, projects,finance, GS and initial commit premises

--- a/website/04-About-us/Staff/Headquarters/06-project.html
+++ b/website/04-About-us/Staff/Headquarters/06-project.html
@@ -5,7 +5,7 @@
         <div class="description_page_programme no_border no_padding no_margin_bottom">
             <p class="ruolo_persona titolo_gc_europe">Project Manager</p>
             <p class="subtitle_page_programme margin_bottom_20">Alberta Rocca</p>
-            <p class="margin_bottom_20">The Project Manager ensures the successful implementation of educational events carried out at GC headquarters in Venice such as trainings and summer schools.</p>
+            <p class="margin_bottom_20">Alberta, as Project Manager, ensures the successful implementation of educational events carried out at GC headquarters in Venice such as trainings and summer schools.</p>
             <div class="text_read_more">
                 <p class="margin_bottom_20">She is responsible of the planning and realising of the activities throughout each stage of their development including submission of proposals, budgeting and financial management of projects, development of internal support mechanisms and knowledge sharing, coordination of the project's team, overlooking project related communication and logistics issues and drafting evaluation and reporting feedback.</p>
                 <p>Email: <a class="titolo_gc_europe" href="mailto:alberta.rocca@eiuc.org">alberta.rocca@eiuc.org</a></p>
