--- a/website/04-About-us/Staff/Headquarters/07-finance.html
+++ b/website/04-About-us/Staff/Headquarters/07-finance.html
@@ -48,7 +48,7 @@
         <div class="description_page_programme no_border no_padding no_margin_bottom">
             <p class="ruolo_persona titolo_gc_europe">Finance Officer</p>
             <p class="subtitle_page_programme margin_bottom_20">Giulia Vallata</p>
-            <p class="margin_bottom_20">Giulia Vallata serves as Finance Officer. She was a research fellow at Venice Ca’ Foscari University, working for the department of Languages and Comparate Cultural Studies and entrusted with a study on the history of the Venice based University’s internationalisation processes.</p>
+            <p class="margin_bottom_20">Giulia serves as Finance Officer. She was a research fellow at Venice Ca’ Foscari University, working for the department of Languages and Comparate Cultural Studies and entrusted with a study on the history of the Venice based University’s internationalisation processes.</p>
             <div class="text_read_more">
                 <p class="margin_bottom_20">She holds a Master’s Degree in Comparate International Relations-curriculum Transatlantic-form Ca’ Foscari University and a Bachelor’s Degree in Political Science, International and European Studies-curriculum Politics and European Integration-from the University of Padua.</p>
                 <p class="margin_bottom_20">She previously worked at Eiuc as IT and Web Advertising Assistant. While studying she worked in a shipping company serving with national and international clients, worldwide customs and finance.</p>
