--- a/website/04-About-us/Staff/Headquarters/09-GS.html
+++ b/website/04-About-us/Staff/Headquarters/09-GS.html
@@ -3,7 +3,7 @@
 <div class="table_accordion">
     <div class="table_people_cell"><img class="img_persona" src="files/eiuc/staff/Alessandra_Silanos_global_campus_eiuc.jpg" alt="Alessandra Silanos - Global Campus">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
-            <p class="ruolo_persona titolo_gc_europe">General Services Manager / Head of Department</p>
+            <p class="ruolo_persona titolo_gc_europe">General Services Manager</p>
             <p class="subtitle_page_programme margin_bottom_20">Alessandra Silanos</p>
             <p class="margin_bottom_20">Alessandra actively contributes to the organization by supervising and coordinating the acquisition of goods and services. She also selects and deals with the providers, including negotiating rates and conditions.</p>
             <div class="text_read_more">
