--- a/website/04-About-us/Staff/Headquarters/03-e-learning.html
+++ b/website/04-About-us/Staff/Headquarters/03-e-learning.html
@@ -29,7 +29,7 @@
         <div class="description_page_programme no_border no_padding no_margin_bottom">
             <p class="ruolo_persona titolo_gc_europe">Children's Rights E-learning Expert</p>
             <p class="subtitle_page_programme margin_bottom_20">Manuela Pegoraro</p>
-            <p class="margin_bottom_20">Manuela Pegoraro started working for the Global Campus in 2019. She has 15+ years’ experience in education, communication and project-management. She previously worked for an agency of the European Commission and in academic and non-profit organisations in Europe, the USA and the Middle East.</p>
+            <p class="margin_bottom_20">Manuela started working for the Global Campus in 2019. She has 15+ years’ experience in education, communication and project-management. She previously worked for an agency of the European Commission and in academic and non-profit organisations in Europe, the USA and the Middle East.</p>
             <div class="text_read_more">
                 <p class="margin_bottom_20">Her most enjoyable and successful experiences are related to the coordination of European networks and the management of multinational project teams. She currently contributes to the implementation of online educational programmes on children’s rights.</p>
                 <p class="margin_bottom_20">Manuela holds an MA in E-learning from the University of Florence and one in Cultural Management from the University of Northumbria at Newcastle.</p>
