--- a/website/04-About-us/Staff/Headquarters/10-premises.html
+++ b/website/04-About-us/Staff/Headquarters/10-premises.html
@@ -1,15 +1,16 @@
 <p class="subtitle_page_programme">Premises, IT and Web Marketing Department</p>
 <p class="margin_bottom_20">We ensure that the Global Campus headquarters, located in the Monastery of San Nicolò, is fully functioning in terms of safety compliance, routine maintenance, IT services, compliance with privacy provisions, inventory management and provision of reception and protocol services. We support the Secretary General in liaising with the City of Venice which provides the premises. We are also responsible for web development and web advertising for all HQ and global activities.</p>
 <div class="table_accordion">
-    <div class="table_people_cell"><img class="img_persona" src="files/eiuc/staff/Luca_Fantinel_global_campus_eiuc.jpg" alt="Luigi Calcolatore - Global Campus">
+    <<div class="table_people_cell"><img class="img_persona" src="files/eiuc/staff/Luca_Fantinel_global_campus_eiuc.jpg" alt="Luca Fantinel - Global Campus">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
-            <p class="ruolo_persona titolo_gc_europe">Premises and Technical Services Manager / Head of Department</p>
+            <p class="ruolo_persona titolo_gc_europe">Finance Manager</p>
             <p class="subtitle_page_programme margin_bottom_20">Luca Fantinel</p>
-            <p class="margin_bottom_20">Luca started working in the Centre in 2004 as Finance Manager creating the new Finance department, developing the technology area and the EIUC organisation.</p>
+            <p class="margin_bottom_20">Luca has worked for the Global Campus since 2004. His main responsibility is to manage Global Campus resources. He supervises joint budgets and forecasts and consolidates the results of all partners' reports. He also draws up budgets and reports for new projects.</p>
             <div class="text_read_more">
-                <p class="margin_bottom_20">Since 2013 he is managing the Premises and the technical services ensuring the daily activity of the centre, and the general management of the Monastery. He is supervising the IT and web advertising.</p>
-                <p class="margin_bottom_20">He earns a Degree in economics at the Università Cattolica del Sacro Cuore in Milan and a Master in Business and Administration at the Kansas University. He gathered experience in managing companies and developing start up.</p>
-                <p>Email: <a class="titolo_gc_europe" href="mailto:luca.fantinel@eiuc.org">luca.fantinel@eiuc.org</a><br> Phone: <a class="titolo_gc_europe" href="tel:+39 041 2720 932">+39 041 2720 932</a></p>
+                <p class="margin_bottom_20">Luca holds a degree in economics from the Università Cattolica del Sacro Cuore in Milan and a Master in Business and Administration from the University of Kansas. He gathered experience in managing companies and developing startups.</p>
+                <p class="margin_bottom_20">Currently he also serves as Premises and Technical Services Manager.</p>
+                <p>Email: <a class="titolo_gc_europe" href="mailto:luca.fantinel@gchumanrights.org">luca.fantinel@gchumanrights.org</a></p>
+                <p>Phone: <a class="titolo_gc_europe" href="tel:+39 041 2720 938">+39 041 2720 938</a></p>
             </div>
             <div class="accordion accordion_gc_south_europe read_more">
                 <div class="icon_e_title_accordion">
@@ -22,15 +23,16 @@
             </div>
         </div>
     </div>
-    <div class="table_people_cell"><img class="img_persona" src="files/eiuc/staff/Paola_Gesmundo_global_campus_eiuc.jpg" alt="Nicola Tonon - Global Campus">
+    <div class="table_people_cell"><img class="img_persona" src="files/eiuc/staff/Gaia_Balbo_global_campus.png" alt="Gaia Balbo - Global Campus">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
-            <p class="ruolo_persona titolo_gc_europe">Receptionist</p>
-            <p class="subtitle_page_programme margin_bottom_20">Paola Gesmundo</p>
-            <p class="margin_bottom_20">Paola is the EIUC Receptionist. She studied Tourism Operator Management in Venice, and after living and working in Spain, she became part of the staff in February 2014.</p>
+            <p class="ruolo_persona titolo_gc_europe">Web Marketing Assistant</p>
+            <p class="subtitle_page_programme margin_bottom_20">Gaia Balbo</p>
+            <p class="margin_bottom_20">Gaia joined the Global Campus in October 2018. She is responsible for designing and implementing digital marketing campaigns in collaboration with the IT and Web Marketing Officer. </p>
             <div class="text_read_more">
-                <p class="margin_bottom_20">She is in charge of organizing, welcoming and assisting other staff members, professors, students, guests and invitees of all the events and activities taking place at the Centre during the year.</p>
-                <p class="margin_bottom_20">She gives her support in the preparation of the folders and technical equipment, rooms setting, catering and cleaning services. She is also responsible in the protocoling incoming/outgoing mail and faxes, updating databases and archiving all EIUC/EMA publications and documentations.</p>
-                <p>Email: <a class="titolo_gc_europe" href="mailto:info@eiuc.org">info@eiuc.org</a> / <a class="titolo_gc_europe" href="mailto:reception@eiuc.org">reception@eiuc.org</a> / <a class="titolo_gc_europe" href="mailto:paola.gesmundo@eiuc.org">paola.gesmundo@eiuc.org</a><br> Phone: <a class="titolo_gc_europe" href="tel:+39 041 2720 911">+39 041 2720 911</a></p>
+                <p class="margin_bottom_20">She supports the daily monitoring and evaluation of campaigns, as well as the creation of advertising materials. Gaia also collaborates with the Fundraising, PR and Communication Department by managing the Global Campus Instagram account.</p>
+                <p class="margin_bottom_20">Gaia holds a bachelor’s degree in Language, Civilisation and the Science of Language and a master’s degree in International Relations, both from Ca’ Foscari University of Venice. She gained learning experience in Portugal and Brazil and work experience in Russia.</p>
+                <p>Email: <a class="titolo_gc_europe" href="mailto:activities@gchumanrights.org">activities@gchumanrights.org</a>/<a class="titolo_gc_europe" href="mailto:gaia.balbo@gchumanrights.org">gaia.balbo@gchumanrights.org</a></p>
+                <p>Phone: <a class="titolo_gc_europe" href="tel:+39 041 2720 927">+39 041 2720 927</a></p>
             </div>
             <div class="accordion accordion_gc_south_europe read_more">
                 <div class="icon_e_title_accordion">
@@ -43,16 +45,38 @@
             </div>
         </div>
     </div>
-    <div class="table_people_cell"><img class="img_persona" src="files/eiuc/staff/Cristina_Moras_global_campus_eiuc.jpg" alt="Nicola Tonon - Global Campus">
+    <div class="table_people_cell"><img class="img_persona" src="files/eiuc/staff/Cristina_Moras_global_campus_eiuc.jpg" alt="Cristina Moras - Global Campus">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
             <p class="ruolo_persona titolo_gc_europe">Receptionist</p>
             <p class="subtitle_page_programme margin_bottom_20">Cristina Moras</p>
-            <p class="margin_bottom_20">Cristina is the EIUC Receptionist. She studied romanesque modern languages and literatures in Padua university. She became part of the staff in October 2016.</p>
+            <p class="margin_bottom_20">Cristina joined the Global Campus as receptionist in 2016. She  is responsible for welcoming and assisting staff members, professors, students, guests and invitees in events and activities that take place at the HQ throughout the year.</p>
             <div class="text_read_more">
-                <p class="margin_bottom_20">She lived in Portugal and worked as language assistant in Romania.</p>
-                <p class="margin_bottom_20">She is in charge of welcoming and assisting other staff members, professors, students, guests and invitees of all the events and activities taking place at the Centre during the year. She gives her support in the preparation of the folders and technical equipment, rooms setting, catering and cleaning services.</p>
-                <p class="margin_bottom_20">She is also responsible in the protocoling incoming/outgoing mail and faxes, updating databases and archiving all EIUC/EMA publications and documentations</p>
-                <p>Email: <a class="titolo_gc_europe" href="mailto:info@eiuc.org">info@eiuc.org</a> / <a class="titolo_gc_europe" href="mailto:cristina.moras@eiuc.org">cristina.moras@eiuc.org</a><br> Phone: <a class="titolo_gc_europe" href="tel:+39 041 2720 911">+39 041 2720 911</a></p>
+                <p class="margin_bottom_20">She also supports the preparation of the folders, technical equipment, rooms, catering and cleaning services. Cristina is responsible for protocoling incoming/outgoing mail and faxes, updating databases and archiving EMA publications and documentation.</p>
+                <p class="margin_bottom_20">She studied Romanesque modern languages and literature at the University of Padua. She lived in Portugal and worked as language assistant in Romania.</p>
+                <p>Email: <a class="titolo_gc_europe" href="mailto:info@gchumanrights.org">info@gchumanrights.org</a>/<a class="titolo_gc_europe" href="mailto:cristina.moras@gchumanrights.org">cristina.moras@gchumanrights.org</a></p>
+                <p>Phone: <a class="titolo_gc_europe" href="tel:+39 041 2720 911">+39 041 2720 911</a></p>
+            </div>
+            <div class="accordion accordion_gc_south_europe read_more">
+                <div class="icon_e_title_accordion">
+                    <div class="piu_accordion">
+                        <div class="verticale">[nbsp]</div>
+                        <div class="orizzontale">[nbsp]</div>
+                    </div>
+                    <p class="title_accordion more_less">Read More</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="table_people_cell"><img class="img_persona" src="files/eiuc/staff/Cristina_Moras_global_campus_eiuc.jpg" alt="Cristina Moras - Global Campus">
+        <div class="description_page_programme no_border no_padding no_margin_bottom">
+            <p class="ruolo_persona titolo_gc_europe">Receptionist</p>
+            <p class="subtitle_page_programme margin_bottom_20">Cristina Moras</p>
+            <p class="margin_bottom_20">Cristina joined the Global Campus as receptionist in 2016. She  is responsible for welcoming and assisting staff members, professors, students, guests and invitees in events and activities that take place at the HQ throughout the year.</p>
+            <div class="text_read_more">
+                <p class="margin_bottom_20">She also supports the preparation of the folders, technical equipment, rooms, catering and cleaning services. Cristina is responsible for protocoling incoming/outgoing mail and faxes, updating databases and archiving EMA publications and documentation.</p>
+                <p class="margin_bottom_20">She studied Romanesque modern languages and literature at the University of Padua. She lived in Portugal and worked as language assistant in Romania.</p>
+                <p>Email: <a class="titolo_gc_europe" href="mailto:info@gchumanrights.org">info@gchumanrights.org</a>/<a class="titolo_gc_europe" href="mailto:cristina.moras@gchumanrights.org">cristina.moras@gchumanrights.org</a></p>
+                <p>Phone: <a class="titolo_gc_europe" href="tel:+39 041 2720 911">+39 041 2720 911</a></p>
             </div>
             <div class="accordion accordion_gc_south_europe read_more">
                 <div class="icon_e_title_accordion">
@@ -75,7 +99,7 @@
                 <p class="margin_bottom_20">Nicola has a deep understanding of the importance technology plays in research and related activities and is committed to finding new ways to support staff and students and endeavours through the use of technology. He works closely with students and staff to deliver programmes and services that enhance teaching, research, and student activities.</p>
                 <p class="margin_bottom_20">As Web Marketing Officer, he is in charge of planning digital marketing campaigns including web, SEO/SEM, direct emails, social media and display advertising. On a daily basis he measures and report performance of all digital marketing campaigns and assess against goals. Nicola has is naturally led to identify trends and insights, and optimise spend and performance based on the insights. In his work he utilises strong analytical ability to evaluate end-to-end customer experience across multiple channels and customer touch points, design, create, and edit landing pages that optimise the user experience and user funnels.</p>
                 <p class="margin_bottom_20">He studied mechanical engineering (MA) in Trieste and previously worked at Network Solutions as ITO and he's still actively <a href="https://github.com/bicet">developing many open sources app</a>.</p>
-                <p>Email: <a class="titolo_gc_europe" href="mailto:nicola.tonon@eiuc.org">nicola.tonon@eiuc.org</a><br> Phone: <a class="titolo_gc_europe" href="tel:+39 041 2720 923">+39 041 2720 923</a></p>
+                <p>Email: <a class="titolo_gc_europe" href="mailto:nicola.tonon@gchumanrights.org">nicola.tonon@gchumanrights.org</a><br> Phone: <a class="titolo_gc_europe" href="tel:+39 041 2720 923">+39 041 2720 923</a></p>
             </div>
             <div class="accordion accordion_gc_south_europe read_more">
                 <div class="icon_e_title_accordion">
